# caustics

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.md  expanded_blog_test.rs  expanded_macros.rs  rust-toolchain.toml  test_output.txt
.cargo/: config.toml
caustics/: Cargo.toml  build.rs
caustics-build/: Cargo.toml
caustics-build/src/: lib.rs
caustics-macros/: Cargo.toml  build.rs
caustics-macros/src/: caustics.rs  client.rs  common.rs  entity.rs  errors.rs  lib.rs  name_resolution.rs  primary_key.rs  relation.rs  select_struct.rs  validation.rs  where_param.rs
caustics-macros/src/entity/: code_gen.rs  mod.rs  name_resolution.rs  relation_extraction.rs  relation_submodules.rs  table_name.rs  types.rs
caustics/src/: entity_metadata.rs  key_types.rs  lib.rs  operator.rs  query_builders.rs  types.rs
caustics/src/query_builders/: aggregate.rs  batch.rs  connection_like.rs  count.rs  create.rs  create_many.rs  deferred_lookup.rs  delete.rs  delete_many.rs  first.rs  group_by.rs  has_many_set.rs  many.rs  mod.rs  relation_fetcher.rs  select_first.rs  select_many.rs  select_unique.rs  unique.rs  update.rs  update_many.rs  upsert.rs  utils.rs
caustics/tests/: blog_test.rs  helpers.rs  integration_test.rs  mod.rs  school_test.rs
example/: Cargo.toml
example/src/: lib.rs
example/tests/: prisma_integration.rs
examples/blog/: Cargo.toml  build.rs
examples/blog/src/: entities.rs  lib.rs  main.rs
examples/blog/tests/: mod.rs
examples/dummy/: Cargo.toml  build.rs
examples/dummy/src/: lib.rs
examples/school/: Cargo.toml  build.rs
examples/school/src/: entities.rs  lib.rs  main.rs
examples/school/tests/: mod.rs
prisma/: schema.prisma
prisma-cli/: Cargo.toml
prisma/migrations/20240320000000_init/: migration.sql
