[package]
name = "caustics-macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
sea-orm = { version = "0.12", features = ["runtime-tokio-rustls", "sqlx-postgres", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["serde", "v4"] }
rust_decimal = { version = "1.0", features = ["serde"] }
thiserror = "1.0"
lazy_static = "1.4"
parking_lot = "0.12"
once_cell = "1.19" 
heck = "0.5.0"

[dev-dependencies]
tokio = { version = "1.45.0", features = ["full"] }
