[package]
name = "caustics-macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[features]
default = []
select = []

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
sea-orm = { version = "1.1", features = ["runtime-tokio-rustls", "sqlx-postgres", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v4"] }
rust_decimal = { version = "1", features = ["serde"] }
thiserror = "1"
lazy_static = "1"
once_cell = "1"
heck = "0.4"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
