[package]
name = "caustics-macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[features]
default = []
select = []

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
sea-orm = { version = "1.1", features = ["runtime-tokio-rustls", "sqlx-postgres", "macros"] }
serde_json = "1"
thiserror = "1"
heck = "0.4"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
