[package]
name = "caustics"
version = "0.1.0"
edition = "2021"

[dependencies]
caustics-macros = { path = "../caustics-macros" }
sea-orm = { version = "0.12", features = ["runtime-tokio-rustls", "sqlx-postgres", "sqlx-sqlite", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["serde", "v4"] }
rust_decimal = { version = "1.0", features = ["serde"] }
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
heck = "0.4"
async-trait = "0.1.88"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
sea-orm-migration = "0.12"
sea-query = "0.30"
tokio-test = "0.4"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }
tempfile = "3.8"

[build-dependencies]
quote = "1.0.40"
regex = "1.11.1"
sea-orm = "0.12"
syn = "2.0.101"
walkdir = "2.5.0"
