[package]
name = "caustics"
version = "0.1.0"
edition = "2021"

[features]
select = ["caustics-macros/select"]

[dependencies]
caustics-macros = { path = "../caustics-macros" }
sea-orm = { version = "1.1", features = ["runtime-tokio-rustls", "sqlx-postgres", "sqlx-sqlite", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["serde", "v4"] }
rust_decimal = { version = "1.0", features = ["serde"] }
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
heck = "0.4"
async-trait = "0.1.88"
env_logger = "0.11.8"
once_cell = "1.19"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
sea-orm-migration = "1.1"
sea-query = "0.32"
tokio-test = "0.4"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }
tempfile = "3.8"

[build-dependencies]
quote = "1.0.40"
regex = "1.11.1"
sea-orm = "1.1"
syn = "2.0.101"
walkdir = "2.5.0"
proc-macro2 = "1.0"
heck = "0.4"
uuid = "1.0"
chrono = "0.4"
serde_json = "1.0"
once_cell = "1.19"
