[package]
name = "caustics"
version = "0.1.0"
edition = "2021"

[features]
default = []
select = ["caustics-macros/select"]

[dependencies]
caustics-macros = { path = "../caustics-macros" }
heck = "0.4"
sea-orm = { version = "1.1", features = ["runtime-tokio-rustls", "sqlx-postgres", "sqlx-sqlite", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v4"] }
rust_decimal = { version = "1", features = ["serde"] }
thiserror = "1"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
env_logger = "0.11"
once_cell = "1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
sea-orm-migration = "1.1"
sea-query = "0.32"
tokio-test = "0.4"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }
tempfile = "3"

[build-dependencies]
quote = "1"
regex = "1"
sea-orm = "1.1"
syn = "2"
walkdir = "2"
proc-macro2 = "1"
uuid = "1"
chrono = "0.4"
serde_json = "1"
once_cell = "1"
