[package]
name = "caustics-example"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust.git", default-features = false, features = [
    "postgresql",
] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[lib]
name = "caustics_example"
path = "src/lib.rs"

[workspace]

[dev-dependencies]
testcontainers = "0.15"
once_cell = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
rand = "0.8"