[package]
name = "school"
version = "0.1.0"
edition = "2021"

[features]
select = ["caustics/select", "caustics-macros/select"]

[dependencies]
caustics = { path = "../../caustics" }
caustics-macros = { path = "../../caustics-macros" }
sea-orm = { version = "1.1", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
sea-query = "0.32"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
testcontainers = "0.15"
once_cell = "1"
rand = "0.8"

[build-dependencies]
caustics-build = { path = "../../caustics-build" }
